--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>ネストクリニック 丨 まごころと優しさを大切に</title>
-	<meta name="description" content="まごころと優しさをモットーに患者さんに寄り添った施術を。清潔感溢れるクリニックです。">
+	<meta name="description" content="まごころと優しさをモットーに患者さんに寄り添った施術を。清潔感溢れるクリニックです。！！！">
 	<meta name="keywords" content="ネストクリニック,病院">
 
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
