--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<nav>
 			<ul>
-				<li><a href="#">ネストクリニックについて</a></li>
+				<li><a href="#">ネストクリニックについて！！！</a></li>
 				<li><a href="#">担当医の紹介</a></li>
 				<li><a href="#">医院内の紹介</a></li>
 				<li><a href="#">アクセス</a></li>
